<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="welcome">ConnectIN</string>
    <string name="fill_up_below_details_to_login">Platform for Professional Geeks</string>
    <string name="log_in">Log In</string>
    <string name="UserName">Name</string>
    <string name="customer_Id">Customer Id</string>
    <string name="password">Your Profession</string>
    <string name="login">Get Started</string>
    <string name="heading">We are Glad you choose us :)</string>
    <string name="Image_Description">Image</string>
    <string name="top_image">top image</string>
    <string name="email_news">Want us to send Latest news via email</string>
    <string name="next_activity">See ViewPager</string>
    <string name="view_pager_text">View Pager Text</string>

    <string-array name="courses">
        <item>ONE</item>
        <item>TWO</item>
        <item>THREE</item>
        <item>FOUR</item>
        <item>FIVE</item>
        <item>SIX</item>
    </string-array>
</resources>